Fixed text wrap issue with fade
Added another CSS attribute to fix the wrapping text issue with fade-out
(for long node names).

--- a/deployment/http-root/css/codeine.css
+++ b/deployment/http-root/css/codeine.css
@@ -70,7 +70,9 @@ form.form-inline fieldset div:first-child {
   overflow: hidden;
   /* text-overflow: ellipsis; */
   position: relative;
+  max-height: 18px;
   max-height: 1.1rem;
+  white-space: nowrap;
 }
 
 /* This applies a gradient fade over the node name (instead of an ellipsis) */
@@ -82,6 +84,7 @@ form.form-inline span.version_label:before {
   background: -ms-linear-gradient(left,  rgba(255,255,255,0) 0%,rgba(255,255,255,1) 100%); /* IE10+ */
   background: linear-gradient(to right,  rgba(255,255,255,0) 0%,rgba(255,255,255,1) 100%); /* W3C */
   filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#00ffffff', endColorstr='#ffffff',GradientType=1 ); /* IE6-9 */
+  -ms-filter: "progid:DXImageTransform.Microsoft.gradient(GradientType=1, startColorstr='#00ffffff', endColorstr='#ffffff')"; /* For Internet Explorer 8 */
   bottom: 0;
   content: " ";
   display: block;
